src/test/fail/method_redeclare.ly
<@lily method m():nil {} method m():nil {} @>
